<resources>
    <string name="app_name">Samani</string>
    <string name="rightAddress">The Right Address\n   For Furniture\n Shopping Anyday</string>
    <string name="Quality">It is now very easy to reach the\nbest quality among the\nfurniture products</string>
    <string name="registerButtonName">Register</string>
    <string name="LoginButtonName">Login</string>
    <string name="let_us_login">Let\'s Login</string>
    <string name="DontHveAnAccount">Don\'t have an account? Register</string>
    <string name="enter_email_login">Enter Email</string>
    <string name="enter_password_login">Enter Password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_with_facebook">Facebook</string>
    <string name="register_with_google">Google</string>
    <string name="reigister_sign_up_button">Sign Up</string>
    <string name="tv_app_name">Samani.</string>
    <string name="forgot_password_login">Forgot password</string>
    <string name="login_with_facebook">Facebook</string>
    <string name="login_with_google">Google</string>
    <string name="login_button">Login</string>
    <string name="search">Search</string>
    <string name="trending_tags">Trending tags</string>
    <string name="buy_now_button">Buy Now</string>
</resources>