<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h3"
        android:layout_marginTop="70dp"
        android:drawableStart="@drawable/ic_klaine_shape"
        android:drawablePadding="6dp"
        android:textStyle="bold"
        android:text="Samani."
        android:fontFamily="@font/myriad_font"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineLoginRight"/>


    <TextView
        android:id="@+id/tvLetsRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h4"
        android:layout_marginTop="15dp"
        android:text="Sign Up"
        android:fontFamily="@font/myriad_font"
        android:textStyle="bold"
        android:textSize="29sp"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineLoginRight" />

    <TextView
        android:id="@+id/tvHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        android:textColor="@color/g_blue"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
        app:layout_constraintTop_toBottomOf="@id/tvLetsRegister"
        app:layout_constraintEnd_toStartOf="@id/guidelineLoginRight"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/myriad_font"
        android:textSize="20sp"
        android:text="@string/already_have_an_account_log_in"
        android:layout_marginTop="15dp" />
    <EditText
        android:id="@+id/edFirstNameRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/editTextHeight"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@id/tvHaveAnAccount"
        style="@style/editText"
        android:hint="@string/register_first_name"
        android:inputType="text"
        android:layout_marginTop="11dp"
        />
    <EditText
        android:id="@+id/edLastNameRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/editTextHeight"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@id/edFirstNameRegister"
        style="@style/editText"
        android:hint="@string/register_last_name"
        android:inputType="text"
        android:layout_marginTop="11dp"
        />



    <EditText
        android:id="@+id/edEmailRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/editTextHeight"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@id/edLastNameRegister"
        style="@style/editText"
        android:hint="@string/enter_email_login"
        android:inputType="textEmailAddress"
        android:layout_marginTop="11dp"
        />

    <EditText
        android:id="@+id/edPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/editTextHeight"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@id/edEmailRegister"
        style="@style/editText"
        android:hint="@string/enter_password_login"
        android:inputType="textPassword"
        android:layout_marginTop="11dp"
        />

    <ImageView
        android:id="@+id/facebookLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toStartOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister"
        android:src="@drawable/facebook_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_with_facebook"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/myriad_font"
        app:layout_constraintStart_toStartOf="@id/facebookLogin"
        app:layout_constraintEnd_toEndOf="@id/facebookLogin"
        app:layout_constraintTop_toTopOf="@id/facebookLogin"
        app:layout_constraintBottom_toBottomOf="@id/facebookLogin"/>

    <ImageView
        android:id="@+id/googleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
        android:src="@drawable/google_login_xml" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_with_google"
        android:fontFamily="@font/myriad_font"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/googleLogin"
        app:layout_constraintEnd_toEndOf="@id/googleLogin"
        app:layout_constraintTop_toTopOf="@id/googleLogin"
        app:layout_constraintBottom_toBottomOf="@id/googleLogin"/>

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buttonRegisterRegister"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/smallButtonHeight"
        android:text="@string/reigister_sign_up_button"
        android:fontFamily="@font/myriad_font"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
        app:layout_constraintTop_toBottomOf="@id/edPasswordRegister"
        android:layout_marginTop="15dp"
        app:spinning_bar_color="@color/white"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />

</androidx.constraintlayout.widget.ConstraintLayout>