<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="120dp"
            android:drawableStart="@drawable/ic_klaine_shape"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            android:text="Samani"
            android:fontFamily="@font/myriad_font"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tvRightAddressForShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="45dp"
            android:text="@string/rightAddress"
            android:textStyle="bold"
            android:fontFamily="@font/myriad_font"
            android:textSize="32sp"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
            app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/myriad_font"
            android:textSize="22sp"
            android:text="@string/Quality"
            android:layout_marginTop="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterAccountOptions"
            style="@style/blueButtonStyle"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            android:text="@string/registerButtonName"
            android:fontFamily="@font/myriad_font"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintTop_toBottomOf="@id/tvQuality"
            app:layout_constraintVertical_bias="0.293" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginAccountOptions"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            style="@style/whiteButtonStyle"
            android:textStyle="bold"
            android:fontFamily="@font/myriad_font"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            android:text="@string/LoginButtonName"
            android:layout_marginTop="11dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
